--- a/.github/workflows/mantis-rss-sync.yml
+++ b/.github/workflows/mantis-rss-sync.yml
@@ -5,24 +5,24 @@ on:
   schedule:
     # 매 5분 마다
     - cron: '0 0 1 * *'
-  
+
   # 수동 실행 가능하도록 설정
   workflow_dispatch:
-  
+
   # 코드 변경 시 테스트 실행
   push:
     branches: [main, version_1]
-    paths: 
+    paths:
       - '.github/workflows/mantis-rss-sync.yml'
       - 'scripts/**'
 
 jobs:
   sync-rss:
     runs-on: ubuntu-latest
-    
+
     # 권한 설정
     permissions: write-all
-      
+
     steps:
       # 1. 코드 체크아웃
       - name: Checkout repository
@@ -30,25 +30,25 @@ jobs:
         with:
           # 상태 파일 커밋을 위해 토큰 사용
           token: ${{ secrets.MY_TOKEN }}
-          
+
       # 2. Python 환경 설정
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
           cache: 'pip'
-          
+
       # 3. 의존성 설치
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          
-      # 4. RSS 동기화 스크립트 실행  
+
+      # 4. RSS 동기화 스크립트 실행
       - name: Run RSS sync
         run: |
           python scripts/mantis_rss_sync.py
         env:
-          # 환경 변수들 
+          # 환경 변수들
           RSS_FEED_URL: ${{ vars.MANTIS_RSS_URL }}
           GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}
           TARGET_REPO: ${{ github.repository }}
@@ -56,12 +56,12 @@ jobs:
           DEFAULT_MILESTONE: ${{ vars.DEFAULT_MILESTONE }}
           RSS_PROJECT_NUMBER: ${{ vars.PROJECT_NUMBER }}
           DEFAULT_ISSUE_STATUS: ${{ vars.DEFAULT_STATUS }}
-          
+
       # 5. 상태 파일 변경사항 커밋
       - name: Commit state changes
         run: |
           git config --local user.email "jhyu@warevalley.com"
-          git config --local user.name "jhyu-wv GithubAction"
+          git config --local user.name "jhyu-wv"
           
           # 변경사항이 있는 경우에만 커밋
           if [[ -n $(git status --porcelain) ]]; then
@@ -71,7 +71,7 @@ jobs:
           else
             echo "No changes to commit"
           fi
-          
+
       # 6. 동기화 결과 알림 (선택사항)
       - name: Notify results
         if: failure()
@@ -91,7 +91,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: sync-rss
     if: always()
-    
+
     steps:
       - name: Clean up old workflow runs
         uses: actions/github-script@v7
